# coursepilot

./: README.md
backend/: main.py  pyproject.toml
backend/app/: asgi.py  dependencies.py
backend/app/api/: auth.py  courses.py  notes.py  users.py
backend/app/db/: init_db.py  session.py
backend/app/db/models/: courses_db.py  notes_db.py  users_db.py
backend/app/models/: auth_models.py  courses_models.py  notes_models.py  user_models.py
backend/app/services/: courses_services.py  notes_services.py  security.py  users_services.py
